...
                android:fontFamily="@font/extrabold"
                android:text="@string/title_movie_header"
                android:textColor="@color/black"
                android:textSize="@dimen/font_18" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shLoading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
                            android:background="@drawable/ic_placeholder"/>
                    </LinearLayout>
                </LinearLayout>
            </com.facebook.shimmer.ShimmerFrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvMovie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:visibility="gone"
                android:nestedScrollingEnabled="false" />
        </LinearLayout>
...
