<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.favorite.movie.MovieFavFragment">

    <com.ndroid.CoolEditText
        android:id="@+id/etSearch"
        style="@style/coolEditTextFlat"
        android:layout_marginTop="@dimen/margin_10"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="@dimen/padding_10"
        android:imeOptions="actionDone"
        android:maxLines="1"
        android:inputType="text"
        android:hint="@string/title_pencarian" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:fontFamily="@font/extrabold"
        android:text="@string/title_fav_movie_header"
        android:textColor="@color/black"
        android:textSize="@dimen/font_18" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvFavMovie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:visibility="visible"
        android:nestedScrollingEnabled="false" />

</LinearLayout>